--- a/src/main/webapp/dirigente/montagemFicha.xhtml
+++ b/src/main/webapp/dirigente/montagemFicha.xhtml
@@ -159,7 +159,7 @@
 							 selectionMode="single" rowKey="#{ficha.id}"
 							 emptyMessage="Não há Fichas de Encontristas/Encontreiros cadastradas" style="width:100%;"
 							 rows="10" paginator="true" paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
-							 rowsPerPageTemplate="10,20,30,40,50"
+							 rowsPerPageTemplate="10,20,30,40,50" paginatorPosition="top"
 				currentPageReportTemplate="Registro(s) {startRecord} a {endRecord} de um total de {totalRecords} - Página {currentPage} de {totalPages}">
 					<f:facet name="header">
 						<h:panelGrid columns="2" styleClass="semBordaInterna"
