Indicadores - Ecc, Aptidões e Atividades, não deixar excluir atividade se ECC encerrado

--- a/src/main/webapp/dirigente/montagemFicha.xhtml
+++ b/src/main/webapp/dirigente/montagemFicha.xhtml
@@ -889,7 +889,7 @@
 								</p:column>
 								<p:column headerText="Excluir" styleClass="Gildasio" width="40">
 									<p:commandLink update=":cadNovasAtividades:tabelaAtividades, listagemFichas:fichas"
-												   process="@this" action="#{fichaBean.removeAtividade()}">
+												   process="@this" action="#{fichaBean.removeAtividade()}" rendered="#{atividade.ecc.situacao eq 'ANDAMENTO'}">
 										<h:graphicImage library="imagens" name="remover.png" />
 										<f:setPropertyActionListener target="#{fichaBean.atividade}"
 																	 value="#{atividade}" />
