--- a/src/main/webapp/publico/estatistica.xhtml
+++ b/src/main/webapp/publico/estatistica.xhtml
@@ -161,11 +161,11 @@
 				-->
 				<div id="divEstatisticaECCSuperiorEsquerda">
 					<div id="divEstatisticaECCSuperiorEsquerda_01">
-						<div class="caixa caixa-azul" style="width: 620px;">
+						<div class="caixa caixa-azul" style="width: 539px;">
 							<h:outputLabel value="Tabela de ECC "
 										   styleClass="negrito" style="font-size:15px;" />
 							<p:selectOneMenu id="ecc" value="#{estatisticaBean.eccFiltro}"
-											 style="width:105px;margin-left:350px;display: inline-table">
+											 style="width:105px;margin-left:260px;display: inline-table">
 								<f:selectItem itemLabel="TODOS"/>
 								<f:selectItems value="#{eccBean.listaEcc}"
 											   var="ecc" itemValue="#{ecc.numero}"
@@ -185,8 +185,8 @@
 									 emptyMessage="Não há ECCs">
 							<p:columnGroup type="header">
 								<p:row>
-									<p:column rowspan="1" headerText="Casal" />
-									<p:column colspan="1" headerText="Equipe" width="220px;" />
+									<p:column rowspan="1" headerText="Casal" width="220px;"/>
+									<p:column colspan="1" headerText="Equipe" width="195px;" />
 								</p:row>
 							</p:columnGroup>
 
@@ -222,27 +222,28 @@
 					</div>
 				</div>
 			</div>
-			<!-- DIV ENCONTREIROS E ENCOTNRISTAS -->
+			<!-- DIV ENCONTREIROS E ENCONTRISTAS -->
 			<div id="divEstatisticaEncontreiroEncontrista">
-				<div class="info-box" style="width: 195px; height: 60px;">
+				<div class="info-box" style="width: 130px; height: 60px;">
 					<span class="info-box-icon bg-aqua">
 						<h:graphicImage library="imagens"
-										style="width:35px; height:35px;" name="encontreiro.png" />
+										style="width:35px; height:35px;" name="encontreiro.png" title="Encontreiros"/>
 					</span>
 					<div class="info-box-content">
+						<!--
 						<span class="info-box-text"><b><font size="3px">ENCONTREIROS</font></b></span>
+						-->
 						<span class="info-box-number">
               				#{estatisticaBean.numeroEncontreiros}
               			</span>
 					</div>
 				</div>
-				<div class="info-box" style="width: 195px;">
+				<div class="info-box" style="width: 130px;">
 						<span class="info-box-icon bg-yellow">
 							<h:graphicImage library="imagens"
-											style="width:35px; height:35px;" name="encontrista.png" />
+											style="width:35px; height:35px;" name="encontrista.png" title="Encontristas"/>
 						</span>
 					<div class="info-box-content">
-						<span class="info-box-text"><b><font size="3px">ENCONTRISTAS</font></b></span>
 						<span class="info-box-number">
 								#{estatisticaBean.numeroEncontristas}
 							</span>
@@ -252,9 +253,9 @@
 			<!-- DIV APTIDÕES -->
 			<div id="divEstatisticaAptidaoSuperiorDireita">
 					<div id="divEstatisticaAptiaoDireita_01">
-						<div class="caixa caixa-laranja" style="width: 420px;">
+						<div class="caixa caixa-laranja" style="width: 320px;">
 							<p:selectOneMenu id="aptidao" value="#{estatisticaBean.aptidaoFiltro}"
-											 style="width:250px;margin-left:100px;display: inline-table">
+											 style="width:250px;margin-left:5px;display: inline-table">
 								<f:selectItem itemLabel="TODAS"/>
 								<f:selectItems value="#{equipeBean.lista}"
 											   var="aptidao" itemValue="#{aptidao.descricao}"
@@ -294,56 +295,54 @@
 					</div>
 				</div>
 			</div>
-		</div>
-		</div>
-
-		<!-- DIV ATIVIDADES -->
-		<div id="divEstatisticaEstaticaInferior">
-		<div id="divEstatisticaChefeInferiorEsquerda">
-			<div id="divEstatisticaAtividadeInferiorEsquerda">
-				<div class="caixa caixa-verde" style="width: 420px;">
-					<p:selectOneMenu id="atividade" value="#{estatisticaBean.atividadeFiltro}"
-									 style="width:250px;margin-left:100px;display: inline-table">
-						<f:selectItem itemLabel="TODAS"/>
-						<f:selectItems value="#{equipeBean.lista}"
-									   var="atividade" itemValue="#{atividade.descricao}"
-									   itemLabel="#{atividade.descricao}" />
-						<p:ajax listener="#{estatisticaBean.filtraPorAtividade()}"
-								event="change" update="tabelaAtividades" />
-					</p:selectOneMenu>
-					<p:commandLink actionListener="#{estatisticaBean.imprimirEcc}"
-								   target="_blank" ajax="false" immediate="true">
-						<p:button icon="ui-icon-print" style="margin-left: 5px;" />
-					</p:commandLink>
-				</div>
-			</div>
-			<div id="divBoxAptidao">
-				<h:panelGrid columns="3">
-					<h:panelGroup>
-						<h:outputLabel value="Atividade" style="font-size:15px; color: #737373" />
-						<br />
-						<h:outputLabel value="Total de Casais por Atividade"
-									   styleClass="negrito" style="font-size:15px;" />
-					</h:panelGroup>
-				</h:panelGrid>
-				<div id="divDadosAptidao">
-					<h:panelGroup id="tabelaAtividades">
-						<c:forEach items="#{estatisticaBean.listaDasAtividades}"
-								   var="result" varStatus="count">
-							<div id="divLista_02">
-								<p:outputLabel value="#{result.atividade}" styleClass="negrito" />
-							</div>
-							<div id="divLista_03">
-								<p:outputLabel value="#{result.quantidade}" />
-							</div>
-							<div id="limpa" />
-							<hr	style="border: 1px; border-top: 1px solid #ccc; margin-left: 10px; width: 94%" />
-						</c:forEach>
-					</h:panelGroup>
+			<!-- DIV ATIVIDADES -->
+			<div id="divEstatisticaAtividadeEncontristaEquipeSuperiorDireita">
+				<div id="divEstatisticaChefeInferiorEsquerda">
+					<div class="caixa caixa-verde" style="width: 320px;">
+						<p:selectOneMenu id="atividade" value="#{estatisticaBean.atividadeFiltro}"
+										 style="width:250px;margin-left:5px;display: inline-table">
+							<f:selectItem itemLabel="TODAS"/>
+							<f:selectItems value="#{equipeBean.lista}"
+										   var="atividade" itemValue="#{atividade.descricao}"
+										   itemLabel="#{atividade.descricao}" />
+							<p:ajax listener="#{estatisticaBean.filtraPorAtividade()}"
+									event="change" update="tabelaAtividades" />
+						</p:selectOneMenu>
+						<p:commandLink actionListener="#{estatisticaBean.imprimirEcc}"
+									   target="_blank" ajax="false" immediate="true">
+							<p:button icon="ui-icon-print" style="margin-left: 5px;" />
+						</p:commandLink>
+					</div>
+					<div id="divBoxAtividade">
+						<h:panelGrid columns="3">
+							<h:panelGroup>
+								<h:outputLabel value="Atividade" style="font-size:15px; color: #737373" />
+								<br />
+								<h:outputLabel value="Total de Casais por Atividade"
+											   styleClass="negrito" style="font-size:15px;" />
+							</h:panelGroup>
+						</h:panelGrid>
+						<div id="divDadosAtividade">
+							<h:panelGroup id="tabelaAtividades">
+								<c:forEach items="#{estatisticaBean.listaDasAtividades}"
+										   var="result" varStatus="count">
+									<div id="divLista_02">
+										<p:outputLabel value="#{result.atividade}" styleClass="negrito" />
+									</div>
+									<div id="divLista_03">
+										<p:outputLabel value="#{result.quantidade}" />
+									</div>
+									<div id="limpa" />
+									<hr	style="border: 1px; border-top: 1px solid #ccc; margin-left: 10px; width: 94%" />
+								</c:forEach>
+							</h:panelGroup>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
 	</div>
+
 	</h:form>
 	<p:dialog widgetVar="statusDialog" modal="true" draggable="false"
 			  closable="false" resizable="false" showHeader="false" width="250px">
