Indicadores Encontristas/Círculos, Paginador em Palestrantes

--- a/src/main/webapp/dirigente/montagemPalestrante.xhtml
+++ b/src/main/webapp/dirigente/montagemPalestrante.xhtml
@@ -132,7 +132,10 @@
 		<br />
 				<p:dataTable id="palestrantes" value="#{palestranteBean.listaPalestrante}" var="palestrante" rowIndexVar="index" selection="#{palestranteBean.palestrante}"
 							 selectionMode="single" rowKey="#{palestrante.id}"
-							 emptyMessage="Não há Palestrantes cadastrados" style="width:1120px;">
+							 emptyMessage="Não há Palestrantes cadastrados" style="width:1120px;"
+							 rows="10" paginator="true" paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
+							 rowsPerPageTemplate="10,20,30,40,50" paginatorPosition="top"
+							 currentPageReportTemplate="Registro(s) {startRecord} a {endRecord} de um total de {totalRecords} - Página {currentPage} de {totalPages}">
 					<f:facet name="header">
 						<h:panelGrid columns="2" styleClass="semBordaInterna"
 									 columnClasses="tituloGridSolicitacao, botoesGridSolicitacao">
