--- a/src/main/webapp/dirigente/montagemCirculo.xhtml
+++ b/src/main/webapp/dirigente/montagemCirculo.xhtml
@@ -137,7 +137,10 @@
 		<br />
 				<p:dataTable id="circulosEcc" value="#{circuloEccBean.listaCirculoEcc}" var="circuloEcc" rowIndexVar="index" selection="#{circuloEccBean.circuloEcc}"
 							 selectionMode="single" rowKey="#{circuloEcc.id}"
-							 emptyMessage="Não há Círculos cadastrados" style="width:1120px;">
+							 emptyMessage="Não há Círculos cadastrados" style="width:1120px;"
+							 rows="14" paginator="true" paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
+							 rowsPerPageTemplate="14,28,42,56,70" paginatorPosition="top"
+							 currentPageReportTemplate="Registro(s) {startRecord} a {endRecord} de um total de {totalRecords} - Página {currentPage} de {totalPages}">
 					<f:facet name="header">
 						<h:panelGrid columns="2" styleClass="semBordaInterna"
 									 columnClasses="tituloGridSolicitacao, botoesGridSolicitacao">
