--- a/src/main/webapp/dirigente/montagemEncontrista.xhtml
+++ b/src/main/webapp/dirigente/montagemEncontrista.xhtml
@@ -136,7 +136,10 @@
 		<br />
 				<p:dataTable id="encontristasEcc" value="#{encontristaEccBean.listaEncontristaEcc}" var="encontristaEcc" rowIndexVar="index" selection="#{encontristaEccBean.encontristaEcc}"
 							 selectionMode="single" rowKey="#{encontristaEcc.id}"
-							 emptyMessage="Não há Encontristas cadastrados" style="width:1120px;">
+							 emptyMessage="Não há Encontristas cadastrados" style="width:1120px;"
+							 rows="14" paginator="true" paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
+							 rowsPerPageTemplate="14,28,42,56,70" paginatorPosition="top"
+							 currentPageReportTemplate="Registro(s) {startRecord} a {endRecord} de um total de {totalRecords} - Página {currentPage} de {totalPages}">
 					<f:facet name="header">
 						<h:panelGrid columns="2" styleClass="semBordaInterna"
 									 columnClasses="tituloGridSolicitacao, botoesGridSolicitacao">
